--- a/index.html
+++ b/index.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Justin Bieber</title>
+    <title>My-Blog</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
-    <h1>Hello</h1>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>
+                <span style="color: green;">W</span>
+                <span style="color: blue;">e</span>
+                <span style="color: red;">l</span>
+                <span style="color: black;">c</span>
+                <span style="color: cyan;">o</span>
+                <span style="color: purple;">m</span>
+                <span style="color: orange;">e</span>
+            </h1>
+            <h1><i style="color: green;">My First Web</i></h1>
+            <h3>Web developer</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.There are no formal educational or licensure requirements to become a web developer. However, many colleges and trade schools offer coursework in web development. There are also many tutorials and articles, which teach web development, freely available on the web - for example Basic JavaScript
+            Even though there are no formal educational requirements, dealing with web developing projects requires those who wish to be referred to as web developers to have advanced knowledge/skills in:HTML/XHTML, CSS, JavaScript and jQuery.Server/client side architecture like all or some of the above mentioned.Programming/Coding/Scripting in one of the many server-side languages or frameworks (e.g., Perl, Python, Ruby, PHP, Go, CFML - ColdFusion, Java, ASP, ASP.NET, Node.js)
+            Ability to utilize a database</p>
+            <a class="link-button" target="_blank" href="https://en.wikipedia.org/wiki/Web_developer">Wikipedia</a>
+        </div>
+        <div class="half-width">
+            <img src="image/my-bg1.png" alt="">
+        </div>
+    </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="image/my-bg2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics. Front-end developers (also known as client-side development) use a variety of programming languages and frameworks such as HTML, CSS and JavaScript to build the exterior look and features of a site. Back-end developers use programming languages such as Python and Ruby to design, build and integrate applications from front-end development into the back end—in other words, they make the features on the site operate. Individuals with skills in both front- and back-end development are known as “full-stack developers.”</p>
+            <a target="_blank" class="link-button" href="https://www.freecodecamp.org/news/my-journey-to-becoming-a-web-developer-from-scratch-without-a-cs-degree-2-years-later-and-what-i-4a7fd2ff5503/">Freecodecamp</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2 style="color: darkred;">Experiences</h2>
+        <br>
+        <br>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full stack web developer</h2>
+            <h3 class="text-highlight">2021-Present | pro level dev</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div id="baby-web" class="half-width single-experience">
+            <h2>Baby web developer</h2>
+            <h3 class="text-highlight">2020-2021 | programing Hero learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero</p>
+        </div>
+
+    </section>
+    <footer>
+        <p>Copyright ©2020 Sourov Modak All Rights Reserved</p>
+    </footer>
 </body>
+
 </html>
